Update registration link for private class

--- a/pages/privateclass.html
+++ b/pages/privateclass.html
@@ -1098,7 +1098,7 @@
           <li>Lifetime support & diskusi tanpa batas</li>
           <li>Lokasi pertemuan fleksibel sesuai kesepakatan</li>
         </ul>
-        <a href="https://wa.me/" class="pricing-cta" target="_blank">Hubungi untuk Daftar</a>
+        <a href="https://page.byscript.io/pages/checkout-private" class="pricing-cta" target="_blank">Daftar Private Class</a>
         <p class="pricing-note-bottom">Slot terbatas · Diskusi jadwal setelah pendaftaran</p>
       </div>
     </div>
