--- a/pages/webinar.html
+++ b/pages/webinar.html
@@ -1247,7 +1247,7 @@
           <li class="muted-feat">Video pembelajaran terstruktur</li>
           <li class="muted-feat">Grup komunitas eksklusif</li>
         </ul>
-        <a href="checkout-starter.html" class="btn-buy outline" style="margin-top:auto">Pilih Starter →</a>
+        <a href="webinar-starter.html" class="btn-buy outline" style="margin-top:auto">Pilih Starter →</a>
       </div>
 
       <!-- SILVER -->
@@ -1270,7 +1270,7 @@
           <li class="muted-feat">Video pembelajaran terstruktur</li>
           <li class="muted-feat">Grup komunitas eksklusif</li>
         </ul>
-        <a href="checkout-silver.html" class="btn-buy outline" style="margin-top:auto">Pilih Silver →</a>
+        <a href="webinar-silver.html" class="btn-buy outline" style="margin-top:auto">Pilih Silver →</a>
       </div>
 
       <!-- GOLD (FEATURED) -->
@@ -1296,7 +1296,7 @@
           <li><strong>✨ Video pembelajaran terstruktur (selamanya)</strong></li>
           <li><strong>✨ Grup komunitas eksklusif</strong></li>
         </ul>
-        <a href="checkout-gold.html" class="btn-buy primary" style="margin-top:auto">Ambil Gold Sekarang →</a>
+        <a href="webinar-gold.html" class="btn-buy primary" style="margin-top:auto">Ambil Gold Sekarang →</a>
       </div>
 
     </div>
