--- a/pages/webinar.html
+++ b/pages/webinar.html
@@ -1191,20 +1191,20 @@
 <!-- INSTRUCTOR -->
 <section id="instructor">
   <div class="container">
-    <p class="section-label reveal">// Tentang Instruktur</p>
+    <p class="section-label reveal">//Tentang Pembicara</p>
     <div class="instructor-wrap">
       <div class="instructor-avatar reveal">👨‍💻</div>
       <div class="reveal">
-        <div class="instructor-name">[Nama Lo]</div>
+        <div class="instructor-name">Edwin Ardyanto</div>
         <div class="instructor-title">Algo Trader · Pine Script Developer · Educator</div>
         <p class="instructor-bio">
           [Isi dengan bio singkat lo — pengalaman trading, berapa lama, aset apa yang ditradingkan, dan kenapa lo passionate ngajarin ini ke orang lain. 2–3 kalimat cukup. Buat jujur dan relatable.]
         </p>
         <div class="creds">
-          <div class="cred"><div class="cred-icon">📊</div> [X] tahun pengalaman di pasar crypto/forex/saham</div>
-          <div class="cred"><div class="cred-icon">🤖</div> Telah build [X]+ strategi algo yang berjalan di live market</div>
-          <div class="cred"><div class="cred-icon">🎓</div> Pernah ngajarin [X]+ trader secara online & offline</div>
-          <div class="cred"><div class="cred-icon">💬</div> Aktif di komunitas [nama komunitas/sosmed lo]</div>
+          <div class="cred"><div class="cred-icon">📊</div> 4+ tahun pengalaman di market crypto</div>
+          <div class="cred"><div class="cred-icon">🤖</div> Telah build 100+ strategi algo</div>
+          <div class="cred"><div class="cred-icon">🎓</div> Mengajar 500+ trader secara online & offline</div>
+          <div class="cred"><div class="cred-icon">💬</div> Aktif membangun komunitas byScript.io</div>
         </div>
       </div>
     </div>
