Update footer branding and copyright information

--- a/pages/webinar.html
+++ b/pages/webinar.html
@@ -1519,8 +1519,8 @@ function ooBuy(tier) {
 
 <!-- FOOTER -->
 <footer>
-  <div class="logo">AlgoSchool</div>
-  <p>© 2025 AlgoSchool. Semua hak dilindungi.</p>
+  <div class="logo">byScript.io Academy</div>
+  <p>© 2025 byScript.io All Rights Reserve.</p>
   <p style="font-size:0.72rem;color:var(--muted)">Hasil trading bervariasi. Webinar ini bersifat edukatif.</p>
 </footer>
 
