--- a/pages/webinar.html
+++ b/pages/webinar.html
@@ -929,7 +929,7 @@
 
 <!-- NAV -->
 <nav>
-  <div class="nav-logo">Algo<span>School</span></div>
+  <div class="nav-logo">byScript.io<span> Academy</span></div>
   <a href="#pricing" class="cta-nav">Daftar Sekarang →</a>
 </nav>
 
