--- a/pages/webinar.html
+++ b/pages/webinar.html
@@ -941,7 +941,7 @@
     <div class="hero-left">
       <div class="badge"><span class="dot"></span> Live Webinar · 15 Maret 2025</div>
 
-      <h1>Bikin Robot<br>Trading dengan<br><em>Pine Script & AI</em></h1>
+      <h1>Bikin Algo<br>Trading dengan<br><em>Pine Script & AI</em></h1>
 
       <p class="hero-sub">
         Dari nol hingga strategi otomatis yang bisa di-backtest — khusus untuk trader Indonesia yang mau naik level tanpa harus jadi programmer.
