Update webinar details and content

--- a/pages/webinar.html
+++ b/pages/webinar.html
@@ -939,7 +939,7 @@
   <div class="hero-grid">
 
     <div class="hero-left">
-      <div class="badge"><span class="dot"></span> Live Webinar · 15 Maret 2025</div>
+      <div class="badge"><span class="dot"></span> Live Webinar · 8 Maret 2025</div>
 
       <h1>Bikin Algo<br>Trading dengan<br><em>Pine Script & AI</em></h1>
 
@@ -1015,8 +1015,8 @@
 <!-- TICKER -->
 <div class="ticker-wrap">
   <div class="ticker-track">
-    <div class="ticker-item">Pine Script v5 <span>✦</span></div>
-    <div class="ticker-item">ChatGPT + Claude <span>✦</span></div>
+    <div class="ticker-item">Pine Script v6 <span>✦</span></div>
+    <div class="ticker-item">ChatGPT <span>✦</span></div>
     <div class="ticker-item">Backtest Otomatis <span>✦</span></div>
     <div class="ticker-item">EMA RSI MACD <span>✦</span></div>
     <div class="ticker-item">Webhook Automation <span>✦</span></div>
@@ -1164,7 +1164,6 @@
           <h3>Sesi 3 — AI sebagai Coding Partner</h3>
           <p>Framework prompt yang efektif, cara debug error, iterasi strategi dengan AI, dan workflow yang bisa langsung lo terapkan.</p>
           <div class="agenda-tags">
-            <span class="tag">Claude AI</span>
             <span class="tag">ChatGPT</span>
             <span class="tag">Prompting</span>
           </div>
@@ -1176,7 +1175,7 @@
         <div class="agenda-dot"></div>
         <div class="agenda-content">
           <h3>Sesi 4 — Build Strategy End-to-End</h3>
-          <p>Live coding strategi EMA + RSI dari nol, backtest, baca hasilnya, optimasi, dan pembahasan common mistakes.</p>
+          <p>Live coding strategi sesuai request saat live dari nol, backtest, baca hasilnya, optimasi, dan pembahasan common mistakes.</p>
           <div class="agenda-tags">
             <span class="tag">Live Demo</span>
             <span class="tag">Backtest</span>
@@ -1450,7 +1449,7 @@ function ooBuy(tier) {
           Software apa yang perlu disiapkan sebelum webinar?
           <span class="arrow">+</span>
         </button>
-        <div class="faq-a">Hanya butuh akun TradingView (gratis sudah cukup untuk webinar ini) dan akun AI tool pilihan lo (Claude atau ChatGPT). Tidak perlu install apapun — semua berbasis browser.</div>
+        <div class="faq-a">Hanya butuh akun TradingView (gratis sudah cukup untuk webinar ini) dan akun AI ChatGPT. Tidak perlu install apapun — semua berbasis browser.</div>
       </div>
 
       <div class="faq-item">
