--- a/pages/webinar.html
+++ b/pages/webinar.html
@@ -1292,7 +1292,9 @@
 
       <!-- Avatar + social -->
       <div class="avatar-card reveal">
-        <div class="avatar-frame">👨‍💻</div>
+        <div class="avatar-frame">
+          <img src="edwin.jpg" alt="Edwin Ardyanto" style="width:100%;height:100%;object-fit:cover;border-radius:20px;">
+        </div>
         <div class="social-badges">
           <a href="#" class="social-badge">
             <span class="s-icon">🐦</span> @edwinardyanto
