--- a/pages/webinar.html
+++ b/pages/webinar.html
@@ -1340,7 +1340,7 @@
         </div>
 
         <!-- Creds -->
-        <div class="creds">
+        <!-- <div class="creds">
           <div class="cred">
             <div class="cred-icon">📊</div>
             4+ tahun aktif trading di pasar crypto & aset digital
@@ -1356,7 +1356,7 @@
           <div class="cred">
             <div class="cred-icon">💬</div>
             Founder komunitas byScript.io — algo trading untuk semua
-          </div>
+          </div> -->
         </div>
       </div>
 
