--- a/pages/webinar-gold.html
+++ b/pages/webinar-gold.html
@@ -316,12 +316,9 @@
 
     <p class="benefits-title">Detail Event</p>
     <ul class="benefit-list">
-      <li><span class="check">📅</span> Tanggal: <strong style="color:var(--white);margin-left:0.3rem">[Tanggal Webinar]</strong></li>
-      <li><span class="check">⏰</span> Jam: <strong style="color:var(--white);margin-left:0.3rem">[Jam mulai] WIB</strong></li>
-      <li><span class="check">🖥️</span> Platform: <strong style="color:var(--white);margin-left:0.3rem">Discord (link dikirim via email)</strong></li>
-      <li><span class="check">🎬</span> Rekaman tersedia 24 jam setelah webinar selesai</li>
-      <li><span class="check">📚</span> Akses video pembelajaran aktif dalam 3–7 hari kerja</li>
-      <li><span class="check">📩</span> Konfirmasi dikirim ke email setelah pembayaran</li>
+      <li><span class="check">📅</span> Tanggal: <strong style="color:var(--white);margin-left:0.3rem">08 Maret 2026</strong></li>
+      <li><span class="check">⏰</span> Jam: <strong style="color:var(--white);margin-left:0.3rem">11.00 - 15.00 WIB</strong></li>
+      <li><span class="check">🖥️</span> Platform: <strong style="color:var(--white);margin-left:0.3rem">Zoom</strong></li>
     </ul>
 
     <div class="divider"></div>
@@ -329,7 +326,7 @@
     <div class="trust-row">
       <div class="trust-item"><span>🔒</span> Pembayaran aman & terenkripsi</div>
       <div class="trust-item"><span>⭐</span> Garansi uang kembali 7 hari</div>
-      <div class="trust-item"><span>📩</span> Konfirmasi instan via email</div>
+      <div class="trust-item"><span>📩</span> Konfirmasi pembayaran instan via whatsapp/email</div>
       <div class="trust-item"><span>🇮🇩</span> Pembayaran lokal tersedia</div>
     </div>
 
