--- a/pages/webinar.html
+++ b/pages/webinar.html
@@ -4,6 +4,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="favicon.png" type="image/jpeg">
+<meta property="og:image" content="https://byscript.io/pages/og-image.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:title" content="Algo Trading × AI — Webinar Eksklusif">
+<meta property="og:description" content="Dari nol hingga strategi otomatis yang bisa di-backtest. Live 8 Maret 2026.">
+<meta property="og:url" content="https://byscript.io/pages/webinar.html">
 <title>Algo Trading × AI — Webinar Eksklusif</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700;800&family=DM+Mono:ital,wght@0,400;0,500;1,400&family=DM+Sans:ital,wght@0,300;0,400;0,500;1,300&display=swap" rel="stylesheet">
