--- a/pages/webinar.html
+++ b/pages/webinar.html
@@ -9,7 +9,7 @@
 <meta property="og:image:height" content="630">
 <meta property="og:title" content="Algo Trading × AI — Webinar Eksklusif">
 <meta property="og:description" content="Dari nol hingga strategi otomatis yang bisa di-backtest. Live 8 Maret 2026.">
-<meta property="og:url" content="https://page.byscript.io/pages/webinar.html">
+<meta property="og:url" content="https://ppage.byscript.io/pages/og-image.jpg">
 <title>Algo Trading × AI — Webinar Eksklusif</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700;800&family=DM+Mono:ital,wght@0,400;0,500;1,400&family=DM+Sans:ital,wght@0,300;0,400;0,500;1,300&display=swap" rel="stylesheet">
